修改 - 交辦權限雙主鍵改單主鍵、郵件發送邏輯